--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
       <ul>
           <li>
               <a onclick="setLanguaje('es')">
-                  <img class="navFlag" src="svg/spain.svg" alt="es-ES">
+                  <img class="navFlag" src="svg/castellano.svg" alt="es-ES">
               </a>
           </li>
           <li>
               <a onclick="setLanguaje('en')">
-                  <img class="navFlag" src="svg/united-kingdom.svg" alt="en-UK">
+                  <img class="navFlag" src="svg/ingles.svg" alt="en-UK">
               </a>
           </li>
       </ul>
