--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
   <p><a href="images/image2-min.jpg" download> Descargate la siguiente imagen</a></p> <!-- Descargarte un imagen -->
   <p><a href="documents/mamba.pdf"> Mira este documento de una de lasmejores estrellas de este deporte</a></p><!-- Enlace a un documento -->
 
-
+  <div>&nbsp</div>
 
   <aside class="row">
     
