--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
 <title>BASKETBALL HISTORY</title>
    
+   <link rel="stylesheet" type="text/css" href="/css/reset.css"/>
    <link rel="stylesheet" type="text/css" href="/css/estilos.css"/>
    <link rel="icon" type="image/x-icon" href="images/ico/favicon.ico"/>
    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
