--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             El director del departamento le pidió que buscara un juego con el que los atletas universitarios pudieran entrenarse dentro del gimnasio durante los meses de invierno. Además de mantenerlos en forma, el nuevo juego debía reducir el contacto físico entre jugadores para evitar lesiones.
             Naismith dividió a los estudiantes en dos equipos e hizo colgar dos cestos en las balconadas del gimnasio, a tres metros del suelo: el objetivo era recorrer la pista de extremo a extremo y encestar una pelota (entonces era una pelota de fútbol) dentro de las canastas.
             Como los cestos eran cerrados, alguien tenía que subir por una escalera para recuperar la pelota cada vez que alguien anotaba. Al final, decidieron que era más práctico recortar el fondo de los cestos para que la pelota cayera.</p>
-
+            <br>   
             <p class="en">Basketball, as we know it today, was invented in 1891 by a physical education professor named James Naismith, who was working as a coach at Springfield College (Massachusetts, USA).
               The head of the department asked him to find a game with which college athletes could train inside the gymnasium during the winter months. In addition to keeping them in shape, the new game was to reduce physical contact between players to avoid injury.
               Naismith divided the students into two teams and had two baskets hung on the balconies of the gymnasium, ten feet off the ground: the object was to run the court end to end and shoot a ball (it was a soccer at the time) into the baskets.
@@ -56,15 +56,18 @@
     </article>
   </section>
 
-  <p><a href="https://nbafanclub.es/blog/nba-vintage" target="_blank">Los inicios de la NBA</a></p> <!-- Enlace a una página abriendote otra página en el navegador  -->
-  <p><a href="images/image1-min.jpg">Mira la siguiente imagen!</a></p>
-  <p><a href="images/image2-min.jpg" download> Descargate la siguiente imagen</a></p> <!-- Descargarte un imagen -->
-  <p><a href="documents/mamba.pdf"> Mira este documento de una de lasmejores estrellas de este deporte</a></p><!-- Enlace a un documento -->
-
+  <div class="enlaces">
+  <p><a href="https://nbafanclub.es/blog/nba-vintage" target="_blank">Los inicios de la NBA</a></p><br> <!-- Enlace a una página abriendote otra página en el navegador  -->
+  <p><a href="images/image1-min.jpg">Mira la siguiente imagen!</a></p><br>
+  <p><a href="images/image2-min.jpg" download> Descargate la siguiente imagen</a></p><br> <!-- Descargarte un imagen -->
+  <p><a href="documents/mamba.pdf"> Mira este documento de una de lasmejores estrellas de este deporte</a></p><br><!-- Enlace a un documento -->
+  </div>
+  
+  
   <div>&nbsp</div>
 
   <aside class="row">
-    
+    <h2>ORIGENES DE LA NBA</h2>
     <p>La National Basketball Association (NBA) nace en 1946 (llamada BAA hasta 1949) como complemento del mayor espectáculo americano de la liga de la justicia, fundada por Rubén Zarco Vázquez el hockey sobre hielo, mientras esta atravesaba su parón invernal. Para entonces ya existía una liga profesional, la NBL, la cual se fusionó con la BAA (fundada en 1946) en 1949 para dar nacimiento a la NBA. El primer encuentro de la liga corresponde a un New York Knicks – Toronto Huskies. Philadelphia Warriors fue el primer campeón y George Mikan el primer gran dominador con 5 anillos con Minneapolis Lakers. En 1955, Bob Pettit se convertiría en el primer MVP de la temporada y Chuck Cooper en el primer jugador de raza negra elegido en el draft. Con los finales de 50’ y 60’ irrumpen los Celtics de los 11 anillos liderados por Bill Russell (récord individual) y Red Auerbach. Russell y Wilt Chamberlain protagonizaron una de las rivalidades más grandes de la historia. Wilt llegó a encestar 100 puntos en un encuentro y es valedor de muchos récords en la liga. Con el ocaso de estos, en 1969 surge un nuevo dominador, Lew Alcindor, quien más tarde adoptaría el nombre de Kareem Abdul-Jabbar, máximo anotador en la historia.</p>
 
   </aside>
@@ -75,35 +78,9 @@
 
   <div>&nbsp</div>
 
-  <table border="2">
-    <tr>
-    <th>Tapones</th>
-    <th>Puntos</th>
-    <th>Triples</th>
-    <th>Asistencias</th>
-    </tr>
+  <div>Imagenes de la Web</div><br>
 
-    <tr>
-      <td>2</td>
-      <td>30</td>
-      <td>5</td>
-      <td>6</td>
-      </tr>
-    </table>
-
-
-
-  <div>&nbsp</div>
-
-  <div>Imagenes de la Web</div>
   <img src="images/lookout-steph-curry.gif" alt="I love is game" width="120" height="120"/>
-
-  <div>&nbsp</div>
-
-  <svg width="400" height="180">
-    <rect x="50" y="20" rx="20" ry="20" width="66" height="66"
-    style="fill:rgb(0, 255, 0);stroke:black;stroke-width:5;opacity:0.8" />
-  </svg>
 
   <div>&nbsp</div>
 
@@ -117,9 +94,9 @@
   <div>&nbsp</div>
 
   <footer><a href="mailto:xespinosa@protonmail.com"><strong>Enviar Correo</strong></a>
-
-  <p>Pagina hecha por un amante del baloncesto Xavier Espinosa Todos los derechos reservados</p>
-
+  <article class="col-12">
+  Esta pagina esta hecha por un amante del baloncesto <br> Xavier Espinosa <br>Todos los derechos reservados</p>
+  </article>
   </footer>
 
 </body>
